Import of MARCEL/Data-Storage-1.100850 from CPAN.
gitpan-cpan-distribution: Data-Storage
gitpan-cpan-version:      1.100850
gitpan-cpan-path:         MARCEL/Data-Storage-1.100850.tar.gz
gitpan-cpan-author:       MARCEL
gitpan-cpan-maturity:     released

--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,10 @@
-This is the Perl module Data::Storage.
+
+This is the Perl distribution Data-Storage.
 
 ## Installation
 
-Data::Storage installation is straightforward. If your CPAN shell is set up,
-you should just be able to do
+Data-Storage installation is straightforward.
+If your CPAN shell is set up, you should just be able to do
 
     % cpan Data::Storage
 
@@ -18,10 +19,9 @@ Then install it:
 
 ## Documentation
 
-Data::Storage documentation is available as in POD. So you can do:
+Data-Storage documentation is available as in POD.
+So you can do:
 
     % perldoc Data::Storage
 
-to read the documentation online with your favorite pager.
-
-Marcel Gruenauer
+to read the documentation with your favorite pager.
